--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <button type="submit" class="submit-btn">Pledge Your Presence</button>
             </form> -->
             <div class="flex">
-                <iframe class="form" style="align-self: center;"src="https://docs.google.com/forms/d/e/1FAIpQLSeUnGypMcJVGMaEcisTBadXOrGMpg9e6cx6YN-MIDM5v0Z2BQ/viewform?embedded=true" width="700" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <iframe class="form" style="align-self: center;"src="https://docs.google.com/forms/d/e/1FAIpQLSeUnGypMcJVGMaEcisTBadXOrGMpg9e6cx6YN-MIDM5v0Z2BQ/viewform?embedded=true" width="auto" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 <div class="img art-image"><Img style="width: 500px;" src="sophia-ankara.JPG"></Img></div>
             </div>
             <div class="direct-email">
@@ -212,7 +212,7 @@
         <p>Ahuoyiza</p>
     </footer>
 
-    <audio id="backgroundMusic" loop autoplay>
+    <audio id="backgroundMusic" loop autoplay >
         <source src="Beyonc_-_Naughty_Girl.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
